--- a/htmlTemplate/signUp.html
+++ b/htmlTemplate/signUp.html
@@ -21,25 +21,9 @@
 					<h1><a href="index.html">Big Blue's Parking Genie</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<!-- <li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li> -->
+							<li><a href="signUp.html">Home</a></li>
 							<li><a href="#cta" class="button">Sign Up</a></li>
+							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
 						</ul>
 					</nav>
 				</header>
@@ -189,8 +173,14 @@
 
 					<form>
 						<div class="row gtr-50 gtr-uniform">
-							<div class="col-8 col-12-mobilep">
+							<div class="col-12 col-12-mobilep">
 								<input type="email" name="email" id="email" placeholder="Email Address" />
+							</div>
+							<div class="col-12 col-12-mobilep">
+								<input type="password" name="password" id="password" placeholder="Password" />
+							</div>
+							<div class="col-8 col-12-mobilep">
+								<input type="password" name="password" id="password" placeholder="Confirm Password" />
 							</div>
 							<div class="col-4 col-12-mobilep">
 								<input type="submit" value="Sign Up" class="fit" />
