Minor changes to signUp.html

--- a/htmlTemplate/signUp.html
+++ b/htmlTemplate/signUp.html
@@ -188,6 +188,9 @@
 						</div>
 					</form>
 
+					<br />
+					<p>Did you mean to <a href="login.html">Login?</a></p>
+
 				</section>
 
 			<!-- Footer -->
