--- a/htmlTemplate/map.html
+++ b/htmlTemplate/map.html
@@ -50,7 +50,7 @@
 									</li>
 								</ul>
 							</li> -->
-							<li><a href="#" class="button">My Account</a></li>
+							<li><a href="account.html" class="button">My Account</a></li>
 						</ul>
 					</nav>
 				</header>
