Updating links to 'Home' in top navbar

--- a/htmlTemplate/map.html
+++ b/htmlTemplate/map.html
@@ -32,7 +32,7 @@
 					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="nav.html">Home</a></li>
 							<!-- <li>
 								<a href="#" class="icon solid fa-angle-down">Layouts</a>
 								<ul>
