--- a/htmlTemplate/reserveSpot.html
+++ b/htmlTemplate/reserveSpot.html
@@ -100,7 +100,7 @@
 												</select>
 											</div>
 											<div class="row">
-												<div class="row- row-12-mobilep">
+												<div class="col-12">
 													<!-- Table -->
 													<section class="box">
 													<h3>Reservation Details</h3>
