Worked on main.html (previously nav.html)

--- a/htmlTemplate/signUp.html
+++ b/htmlTemplate/signUp.html
@@ -1,5 +1,13 @@
 <!DOCTYPE HTML>
 <!--
+	Big Blue's Parking Genie
+	USU CS3450
+	Group 10 - The Djinns
+	Autumn Arbon, Joel Christensen, Palani Johnson, Lexy Simmons
+	https://github.com/palani-johnson/TheDjinns-Group10
+
+
+	TEMPLATE: 
 	Template:
 	Alpha by HTML5 UP
 	html5up.net | @ajlkn
