--- a/htmlTemplate/main.html
+++ b/htmlTemplate/main.html
@@ -51,7 +51,7 @@
 						<header class="major">
 							<h2>A Hub for all your Parking Needs</h2>
 							<br />
-							<span class="icon solid major fa-long-arrow-alt-down accent4"></span>
+							<a style=" text-decoration: none; border-bottom: none;" href="#customerFunctions"><span class="icon solid major fa-long-arrow-alt-down accent4"></span></a>
 						</header>
 						<!-- <span class="image featured"><img src="images/parkingIvy.jpg" alt="Parking Lot at USU" /></span> -->
 					</section>
@@ -211,28 +211,10 @@
 			<!-- CTA -->
 				<section id="cta">
 
-					<h2>Sign up for an account</h2>
-					<p>Create an account with Big Blue's Parking Genie to reserve parking for USU events.</p>
+					<h2>Manage Your Account</h2>
+					<p>Change account details, update your balance, access useful tools, and more.</p>
 
-					<form>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-12 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
-							</div>
-							<div class="col-12 col-12-mobilep">
-								<input type="password" name="password" id="password" placeholder="Password" />
-							</div>
-							<div class="col-8 col-12-mobilep">
-								<input type="password" name="password" id="password" placeholder="Confirm Password" />
-							</div>
-							<div class="col-4 col-12-mobilep">
-								<input type="submit" value="Sign Up" class="fit" />
-							</div>
-						</div>
-					</form>
-
-					<br />
-					<p>Did you mean to <a href="login.html">Login?</a></p>
+					<a href="account.html" class="button alt">My Account</a>
 
 				</section>
 
