--- a/htmlTemplate/main.html
+++ b/htmlTemplate/main.html
@@ -26,10 +26,10 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Big Blue's Parking Genie</a></h1>
+					<h1><a href="main.html">Big Blue's Parking Genie</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="signUp.html">Home</a></li>
+							<li><a href="main.html">Home</a></li>
 							<li><a href="account.html" class="button">My Account</a></li>
 							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
 						</ul>
@@ -179,32 +179,70 @@
 						</section>
 					</div>
 
-					<div class="row">
-						<div class="col-6 col-12-narrower">
+					<!-- Owner Functionality -->
+					<div id="ownerFunctions">
+						<h2 style="text-align: center;">Lot Owner Functions</h2>
+						<div class="row">
+							<div class="col-6 col-12-narrower">
 
-							<section class="box special">
-								<span class="image featured"><img src="images/googleMapsUSU.jpg" alt="" /></span>
-								<h3>as;dlfkjas;dlfkj</h3>
-								<p>Big Blue's Parking Genie interfaces with Google Maps API to provide high quality navigation guidance.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">See Map of USU</a></li>
-								</ul>
-							</section>
+								<section class="box special">
+									<span class="image featured"><img src="images/parkingGarage2.jpg" alt="" /></span>
+									<h3>Manage my Parking Lots</h3>
+									<p>Assign new attendants; manage parking types and prices.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button special">See my parking lots</a></li>
+									</ul>
+								</section>
 
-						</div>
-						<div class="col-6 col-12-narrower">
+							</div>
+							<div class="col-6 col-12-narrower">
 
-							<section class="box special">
-								<span class="image featured"><img src="images/terrace.jpg" alt="" /></span>
-								<h3>Remember your Favorite Spots</h3>
-								<p>See all your past reservations from within your account, making it easy to attend again.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">Login</a></li>
-								</ul>
-							</section>
+								<section class="box special">
+									<span class="image featured"><img src="images/sunset.jpg" alt="" /></span>
+									<h3>View current lot reservations</h3>
+									<div class="col-12">
+										<select name="category" id="category">
+											<option value="">- Select Event -</option>
+											<option value="1">{{1}}</option>
+											<option value="1">{{2}}</option>
+											<option value="1">{{3}}</option>
+											<option value="1">{{4}}</option>
+										</select>
+										<br />
+										<select name="category" id="category">
+											<option value="">- Select Parking Lot -</option>
+											<option value="1">{{1}}</option>
+											<option value="1">{{2}}</option>
+											<option value="1">{{3}}</option>
+											<option value="1">{{4}}</option>
+										</select>
+									</div>
+									<br />
+									<ul class="actions special">
+										<li><a href="#" class="button special">View Lot Reservations</a></li>
+									</ul>
+								</section>
 
+							</div>
 						</div>
 					</div>
+
+					<!-- University Admin Functionality -->
+					<div id="adminFunctions">
+						<h2 style="text-align: center;">University Admin Functions</h2>
+						<section class="box special">
+								<span class="image featured"><img src="images/desk.jpg" alt="" /></span>
+								<h3>Manage Upcoming USU Events</h3>
+								<ul class="actions special">
+									<li><a href="#" class="button special">See All</a></li>
+								</ul>
+								<h3>Manage Parking Lot Owners</h3>
+								<ul class="actions special">
+									<li><a href="#" class="button special">See All</a></li>
+								</ul>
+						</section>
+					</div>
+					
 
 				</section>
 
