Added log out button to finished pages

--- a/htmlTemplate/reserveSpot.html
+++ b/htmlTemplate/reserveSpot.html
@@ -27,25 +27,9 @@
 					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="nav.html">Home</a></li>
-							<!-- <li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li> -->
-							<li><a href="#" class="button">My Account</a></li>
+							<li><a href="main.html">Home</a></li>
+							<li><a href="account.html" class="button">My Account</a></li>
+							<li><a href="signUp.html" class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
