--- a/htmlTemplate/account.html
+++ b/htmlTemplate/account.html
@@ -27,8 +27,8 @@
 					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="nav.html">Home</a></li>
-							<li><a href="account.html" class="button">My Account</a></li>
+							<li><a href="main.html">Home</a></li>
+							<li><a href="signUp.html" class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
