--- a/htmlTemplate/main.html
+++ b/htmlTemplate/main.html
@@ -29,9 +29,10 @@
 					<h1><a href="main.html">Big Blue's Parking Genie</a></h1>
 					<nav id="nav">
 						<ul>
+							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
 							<li><a href="main.html">Home</a></li>
 							<li><a href="account.html" class="button">My Account</a></li>
-							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
+							<li><a href="signUp.html" class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
