Finished pastReservations.html

--- a/htmlTemplate/pastReservations.html
+++ b/htmlTemplate/pastReservations.html
@@ -14,7 +14,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Alpha by HTML5 UP</title>
+		<title>Reserve Parking Spot</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,28 +24,12 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="main.html">Home</a></li>
+							<li><a href="account.html" class="button">My Account</a></li>
+							<li><a href="signUp.html" class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -53,13 +37,43 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Generic</h2>
-						<p>A generic page for every non-generic situation.</p>
+						<h2>Past Reservations</h2>
+						<p>Review parking lots and spots which you have previously reserved.</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-						<h3>This is a subheading</h3>
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+						<span class="image featured"><img src="images/dash.jpg" alt="" /></span>
+						<!-- Form -->
+								<section class="box">
+									<h3 style="text-align: center;">All Reservations</h3>
+									<ul class="alt">
+										<li>
+											<div class="row">
+												<a href="#" class="button alt col-3">{{Reservation 1}}</a>
+												<p class="col-3"><a href="map.html">View Map</a></p>
+												<p class="col-3"><a href="">Reservation Code</a></p>
+												<p class="col-3"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
+											</div>
+										</li>
+										<li>
+											<div class="row">
+												<a href="#" class="button alt col-3">{{Reservation 1}}</a>
+												<p class="col-3"><a href="map.html">View Map</a></p>
+												<p class="col-3"><a href="">Reservation Code</a></p>
+												<p class="col-3"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
+											</div>
+										</li>
+										<li>
+											<div class="row">
+												<a href="#" class="button alt col-3">{{Reservation 1}}</a>
+												<p class="col-3"><a href="map.html">View Map</a></p>
+												<p class="col-3"><a href="">Reservation Code</a></p>
+												<p class="col-3"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
+											</div>
+										</li>
+										<li><p style="text-align: center;">...</p></li>
+									</ul>
+								</section>
+						<!-- <p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>And now a subheading</h3>
@@ -69,7 +83,7 @@
 								<h3>And another subheading</h3>
 								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</section>
 
