--- a/htmlTemplate/pastReservations.html
+++ b/htmlTemplate/pastReservations.html
@@ -14,7 +14,7 @@
 -->
 <html>
 	<head>
-		<title>Reserve Parking Spot</title>
+		<title>Past Reservations</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
