Added ownerManagement.html which is accessed from main.html by admin

--- a/htmlTemplate/main.html
+++ b/htmlTemplate/main.html
@@ -235,11 +235,11 @@
 								<span class="image featured"><img src="images/desk.jpg" alt="" /></span>
 								<h3>Manage Upcoming USU Events</h3>
 								<ul class="actions special">
-									<li><a href="#" class="button special">See All</a></li>
+									<li><a href="eventManagement.html" class="button special">See All</a></li>
 								</ul>
 								<h3>Manage Parking Lot Owners</h3>
 								<ul class="actions special">
-									<li><a href="#" class="button special">See All</a></li>
+									<li><a href="ownerManagement.html" class="button special">See All</a></li>
 								</ul>
 						</section>
 					</div>
