Finished lotInfo.html, removed some pages and replaced with lotManagement.html

--- a/htmlTemplate/main.html
+++ b/htmlTemplate/main.html
@@ -50,7 +50,7 @@
 				<section id="main" class="container navMain">
 					<section class="box special">
 						<header class="major">
-							<h2>A Hub for all your Parking Needs</h2>
+							<h2>A Hub for All Your Parking Needs</h2>
 							<br />
 							<a style=" text-decoration: none; border-bottom: none;" href="#customerFunctions"><span class="icon solid major fa-long-arrow-alt-down accent4"></span></a>
 						</header>
@@ -191,7 +191,7 @@
 									<h3>Manage my Parking Lots</h3>
 									<p>Assign new attendants; manage parking types and prices.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button special">See my parking lots</a></li>
+										<li><a href="lotManagement.html" class="button special">See my parking lots</a></li>
 									</ul>
 								</section>
 
