--- a/htmlTemplate/lotInfo.html
+++ b/htmlTemplate/lotInfo.html
@@ -1,203 +1,175 @@
 <!DOCTYPE HTML>
 <!--
-	Template:
+	Big Blue's Parking Genie
+	USU CS3450
+	Group 10 - The Djinns
+	Autumn Arbon, Joel Christensen, Palani Johnson, Lexy Simmons
+	https://github.com/palani-johnson/TheDjinns-Group10
+
+
+	TEMPLATE: 
 	Alpha by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Big Blue's Parking Genie</title>
+		<title>Lot Details</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel='icon' href='images/favicon.ico' type='image/x-icon' />
 	</head>
-	<body class="landing is-preload">
+	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
-					<h1><a href="index.html">Big Blue's Parking Genie</a></h1>
+				<header id="header">
+					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<!-- <li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li> -->
-							<li><a href="#cta" class="button">Sign Up</a></li>
+							<li><a href="main.html">Home</a></li>
+							<li><a href="account.html" class="button">My Account</a></li>
+							<li><a href="signUp.html" class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<h2>Redesign to Lot Info Page</h2>
-					<p>Reserve parking spots for Utah State University events</p>
-					<ul class="actions special">
-						<li><a href="#cta" class="button">Sign Up</a></li>
-						<li><a href="#" class="button">Login</a></li>
-					</ul>
-				</section>
-
 			<!-- Main -->
 				<section id="main" class="container">
+					<header>
+						<h2>Details on {{Parking Lot}}</h2> <!-- Attendants navigate here from main.html after selecting an event to check in -->
+					</header>
 
-					<section class="box special">
-						<header class="major">
-							<h2>Introducing the one-stop application
+					<!-- Customer Functionality -->
+					<div id="customerFunctions">
+						<section class="box special">
+							<h3>Parking Lot Map</h3>
 							<br />
-							for finding parking at Utah State</h2>
-							<p>Big Blue’s Parking Genie intends to make parking a more positive experience at Utah State University by collecting the universal parking experience into a single tool.</p>
-						</header>
-						<span class="image featured"><img src="images/parkingIvy.jpg" alt="Parking Lot at USU" /></span>
-					</section>
+							
+							<section class="box">
+								<p>Map here</p>
+							</section>	
 
-					<section class="box special">
-						<header class="major">
-							<h2>Upcoming Utah State Events</h2>
-							<br />
-							<h4>{{--INSERT MONTH HERE--}}</h4>
+
+							<div class="row">
+								<ul class="actions special">
+									<li><a href="reserveSpot.html" class="button">Reserve a Parking Spot</a></li>
+								</ul>
+							</div>
+						</section>
+						<section class="box special">
+							<div class="row">
+								<div class="col-6 col-12-narrower">
+									<!-- Image -->
+									<span class="image fit"><img src="images/parkingMeter.jpg" alt="" /></span>
+								</div>
+
+								<div class="col-6 col-12-narrower">
+									<h4 class="special">Total Parking Spots: {{#}}</h4>
 									<div class="table-wrapper">
-										<table>
+										<table style="text-align: left;">
 											<thead>
 												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Date/Time</th>
+													<th>#</th>
+													<th>Type</th>
+													<th>Price</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td>{{MonthEvent 1}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
+													<td>{{1}}</td>
+													<td>{{Extended/RV}}}</td>
+													<td>{{$25.00}}</td>
 												</tr>
 												<tr>
-													<td>{{MonthEvent 2}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 3}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 4}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 5}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
+													<td>{{1}}</td>
+													<td>{{Extended/RV}}}</td>
+													<td>{{$25.00}}</td>
+												</tr><tr>
+													<td>{{1}}</td>
+													<td>{{Extended/RV}}}</td>
+													<td>{{$25.00}}</td>
+												</tr><tr>
+													<td>{{1}}</td>
+													<td>{{Extended/RV}}}</td>
+													<td>{{$25.00}}</td>
+												</tr><tr>
+													<td>{{1}}</td>
+													<td>{{Extended/RV}}}</td>
+													<td>{{$25.00}}</td>
+												</tr><tr>
+													<td>{{1}}</td>
+													<td>{{Extended/RV}}}</td>
+													<td>{{$25.00}}</td>
 												</tr>
 											</tbody>
-											<!-- <tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot> -->
 										</table>
 									</div>
-						</header>
-						<!-- 
-							Place an image here?
-							<span class="image featured"><img src="images/parkingIvy.jpg" alt="Parking Lot at USU" /></span> -->
-					</section>
-
-					<!-- 4 Section Divider 
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-					</section>
-
-					-->
-
-					<div class="row">
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/googleMapsUSU.jpg" alt="" /></span>
-								<h3>Navigate Easily with Maps</h3>
-								<p>Big Blue's Parking Genie interfaces with Google Maps API to provide high quality navigation guidance.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">See Map of USU</a></li>
-								</ul>
-							</section>
-
-						</div>
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/terrace.jpg" alt="" /></span>
-								<h3>Remember your Favorite Spots</h3>
-								<p>See all your past reservations from within your account, making it easy to attend again.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">Login</a></li>
-								</ul>
-							</section>
-
-						</div>
+								</div>
+							</div>
+						</section>
 					</div>
 
-				</section>
+					<!-- Attendant Functionality -->
+					<div id="attendantFunctions">
+						<h2 style="text-align: center;">Attendant Functions</h2>
+						<section class="box special">
+								<h3>Check In Customers</h3>
+								<div class="col-12">
+									<select name="category" id="category">
+										<option value="">- Select Event -</option>
+										<option value="1">{{1}}</option>
+										<option value="1">{{2}}</option>
+										<option value="1">{{3}}</option>
+										<option value="1">{{4}}</option>
+									</select>
+								</div>
+								<br />
+								<ul class="actions special">
+									<li><a href="attendant.html" class="button special">Fill Event Reservations</a></li>
+								</ul>
+						</section>
+					</div>
 
-			<!-- CTA -->
-				<section id="cta">
+					<!-- Owner Functionality -->
+					<div id="ownerFunctions">
+						<h2 style="text-align: center;">Lot Owner Functions</h2>
+						<div class="row">
+							<div class="col-6 col-12-narrower">
 
-					<h2>Sign up for an account</h2>
-					<p>Create an account with Big Blue's Parking Genie to reserve parking for USU events.</p>
+								<section class="box special">
+									<span class="image featured"><img src="images/parkingGarage2.jpg" alt="" /></span>
+									<h3>Edit this Parking Lot's Details</h3>
+									<p>Assign new attendants; manage parking types and prices.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button special">Manage this parking lot</a></li>
+									</ul>
+								</section>
 
-					<form>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-8 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
 							</div>
-							<div class="col-4 col-12-mobilep">
-								<input type="submit" value="Sign Up" class="fit" />
+							<div class="col-6 col-12-narrower">
+
+								<section class="box special">
+									<span class="image featured"><img src="images/sunset.jpg" alt="" /></span>
+									<h3>View current lot reservations</h3>
+									<div class="col-12">
+										<select name="category" id="category">
+											<option value="">- Select Event -</option>
+											<option value="1">{{1}}</option>
+											<option value="1">{{2}}</option>
+											<option value="1">{{3}}</option>
+											<option value="1">{{4}}</option>
+										</select>
+									</div>
+									<br />
+									<ul class="actions special">
+										<li><a href="#" class="button special">View Lot Reservations</a></li>
+									</ul>
+								</section>
+
 							</div>
 						</div>
-					</form>
-
+					</div>
 				</section>
 
 			<!-- Footer -->
@@ -206,7 +178,7 @@
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 					</ul>
