Edited style on pastReservations.html

--- a/htmlTemplate/pastReservations.html
+++ b/htmlTemplate/pastReservations.html
@@ -39,37 +39,45 @@
 					<header>
 						<h2>Past Reservations</h2>
 						<p>Review parking lots and spots which you have previously reserved.</p>
+						<div class="row">
+							<div class="col-6" style="display: block;
+													  margin-left: auto;
+													  margin-right: auto;
+													  width: 50%;">
+								<span class="image fit"><img src="images/dash.jpg" alt="" /></span>
+							</div>
+						</div>
+
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/dash.jpg" alt="" /></span>
 						<!-- Form -->
-								<section class="box">
-									<h3 style="text-align: center;">All Reservations</h3>
-									<ul class="alt">
-										<li>
-											<div class="row">
-												<a href="#" class="button alt col-4">{{Reservation 1}}</a>
-												<p class="col-4"><a href="map.html">View Map</a></p>
-												<p class="col-4"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
-											</div>
-										</li>
-										<li>
-											<div class="row">
-												<a href="#" class="button alt col-4">{{Reservation 1}}</a>
-												<p class="col-4"><a href="map.html">View Map</a></p>
-												<p class="col-4"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
-											</div>
-										</li>
-										<li>
-											<div class="row">
-												<a href="#" class="button alt col-4">{{Reservation 1}}</a>
-												<p class="col-4"><a href="map.html">View Map</a></p>
-												<p class="col-4"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
-											</div>
-										</li>
-										<li><p style="text-align: center;">...</p></li>
-									</ul>
-								</section>
+						<section class="box">
+							<h3 style="text-align: center;">All Reservations</h3>
+							<ul class="alt">
+								<li>
+									<div class="row">
+										<a href="#" class="button alt col-4">{{Reservation 1}}</a>
+										<p class="col-4"><a href="map.html">View Map</a></p>
+										<p class="col-4"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
+									</div>
+								</li>
+								<li>
+									<div class="row">
+										<a href="#" class="button alt col-4">{{Reservation 1}}</a>
+										<p class="col-4"><a href="map.html">View Map</a></p>
+										<p class="col-4"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
+									</div>
+								</li>
+								<li>
+									<div class="row">
+										<a href="#" class="button alt col-4">{{Reservation 1}}</a>
+										<p class="col-4"><a href="map.html">View Map</a></p>
+										<p class="col-4"><a href="reserveSpot.html">Reserve This Spot Again</a></p>
+									</div>
+								</li>
+								<li><p style="text-align: center;">...</p></li>
+							</ul>
+						</section>
 					</div>
 				</section>
 
