about page two thirds completed

--- a/htmlTemplate/about.html
+++ b/htmlTemplate/about.html
@@ -46,13 +46,29 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Big Blue's Parking Genie</h2>
-					<p>Reserve parking spots for Utah State University events</p>
-					<ul class="actions special">
-						<li><a href="#cta" class="button">Sign Up</a></li>
-						<li><a href="#" class="button">Login</a></li>
-					</ul>
+					<h2>About Big Blue's Parking Genie</h2>
+					<p>And The Team Behind It</p>
 				</section>
+				
+			<!-- Main -->
+				<section id="main" class="container">
+					<div class="box">
+						<h3>What Is Big Blue's Parking Genie?</h3>
+						<p>You know how home owners near universities often charge people to park in their driveways for football games? Most of the time, if you want to park in a local's driveway, you have to show up extra early or park extra far away. Big Blue's Parking Genie aims to resolve this issue with a parking reservation app for Utah State University Events. Here, you can either buy and reserve a parking spot ahead of time or list your own parking spots. Our goal is to connect drivers to parking lots (or driveways) before the event. Doing so saves time, prevents stress, and decreases wandering traffic.</p>
+						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<div class="row">
+							<div class="row-6 row-12-mobilep">
+								<h3>Who Are The Creators?</h3>
+								<p>We are a team goes by the name The Djinns. The four of us (Joel Christensen, Autumn Arbon, Lexy Simmons, and Palani Johnson) have created this for the purpose of fulfilling a school project and to fulfill a need in the community. We are all working toward Bachelor Degrees in Computer Science. We are motivated by the desire to recieve that degree and by our mascot, Palani's cat.</p>
+							</div>
+							<div class="row-6 row-12-mobilep">
+								<h3>And another subheading</h3>
+								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
 
 			<!-- Main -->
 				<section id="main" class="container">
@@ -62,96 +78,8 @@
 							<h2>Introducing the one-stop application
 							<br />
 							for finding parking at Utah State</h2>
-							<p>Big Blue’s Parking Genie intends to make parking a more positive experience at Utah State University by collecting the universal parking experience into a single tool.</p>
-						</header>
-						<span class="image featured"><img src="images/parkingIvy.jpg" alt="Parking Lot at USU" /></span>
 					</section>
-
-					<section class="box special">
-						<header class="major">
-							<h2>Upcoming Utah State Events</h2>
-							<br />
-							<h4>{{--INSERT MONTH HERE--}}</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Date/Time</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>{{MonthEvent 1}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 2}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 3}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 4}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-												<tr>
-													<td>{{MonthEvent 5}}</td>
-													<td>{{Description?}}}</td>
-													<td>{{DATE/TIME}}</td>
-												</tr>
-											</tbody>
-											<!-- <tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot> -->
-										</table>
-									</div>
-						</header>
-						<!-- 
-							Place an image here?
-							<span class="image featured"><img src="images/parkingIvy.jpg" alt="Parking Lot at USU" /></span> -->
-					</section>
-
-					<!-- 4 Section Divider 
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-					</section>
-
-					-->
-
+					
 					<div class="row">
 						<div class="col-6 col-12-narrower">
 
