Work on lotManagement.html

--- a/htmlTemplate/lotInfo.html
+++ b/htmlTemplate/lotInfo.html
@@ -37,7 +37,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Details on {{Parking Lot}}</h2> <!-- Attendants navigate here from main.html after selecting an event to check in -->
+						<h2>Details on {{Parking Lot}}</h2>
 					</header>
 
 					<!-- Customer Functionality -->
