--- a/htmlTemplate/lotManagement.html
+++ b/htmlTemplate/lotManagement.html
@@ -49,75 +49,221 @@
 					</header>
 					<section class="box">
 						<h4 class="special" style="text-align: center;">Total Parking Spots: {{#}}</h4>
-									<div class="table-wrapper">
-										<table style="text-align: left;">
-											<thead>
-												<tr>
-													<th>#</th>
-													<th>Type</th>
-													<th>Price</th>											
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>{{1}}</td>
-													<td>{{Extended/RV}}}</td>
-													<td>{{$25.00}}</td>
-												</tr>
-												<tr>
-													<td class="row">
-														<form method="post" action="#">
-															<select name="category" id="category">
-																<option value="">- Select Type -</option>
-																<option value="1">{{1}}</option>
-																<option value="1">{{2}}</option>
-																<option value="1">{{3}}</option>
-																<option value="1">{{4}}</option>
-															</select>
-															<div>
-																<input type="submit" value="Change Type" class="small" />
-															</div>
-														</form>
-													</td>
-													<td class="row">
-														<form method="post" action="#">
-															<div>
-																<input type="text" name="query" id="query" value="" placeholder="Enter New Price" class="small" />
-															</div>
-															<div>
-																<input type="submit" value="Change Price" class="small" />
-															</div>
-														</form>
-													</td>
-													<td>
-														<a class="button small">Delete</a>
-													</td>
-												</tr>
-												<tr>
-													<td>{{1}}</td>
-													<td>{{Extended/RV}}}</td>
-													<td>{{$25.00}}</td>
-												</tr><tr>
-													<td>{{1}}</td>
-													<td>{{Extended/RV}}}</td>
-													<td>{{$25.00}}</td>
-												</tr><tr>
-													<td>{{1}}</td>
-													<td>{{Extended/RV}}}</td>
-													<td>{{$25.00}}</td>
-												</tr><tr>
-													<td>{{1}}</td>
-													<td>{{Extended/RV}}}</td>
-													<td>{{$25.00}}</td>
-												</tr><tr>
-													<td>{{1}}</td>
-													<td>{{Extended/RV}}}</td>
-													<td>{{$25.00}}</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-					</section>					
+						<div class="table-wrapper">
+							<table style="text-align: left;">
+								<thead>
+									<tr>
+										<th># & Actions</th>
+										<th>Type</th>
+										<th>Price</th>											
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>{{1}}</td>
+										<td>{{Extended/RV}}}</td>
+										<td>{{$25.00}}</td>
+									</tr>
+									<tr class="row">
+										<td class="col-4">
+											<form method="post" action="#">
+												<select name="category" id="category">
+													<option value="">- Select Type -</option>
+													<option value="1">{{1}}</option>
+													<option value="1">{{2}}</option>
+													<option value="1">{{3}}</option>
+													<option value="1">{{4}}</option>
+												</select>
+												<div>
+													<input type="submit" value="Change Type" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<form method="post" action="#">
+												<div>
+													<input type="text" name="query" id="query" value="" placeholder="Enter New Price" class="small" />
+												</div>
+												<div>
+													<input type="submit" value="Change Price" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<a class="button small fit">Delete</a>
+										</td>
+									</tr>
+									<tr>
+										<td>{{2}}</td>
+										<td>{{Extended/RV}}}</td>
+										<td>{{$25.00}}</td>
+									</tr>
+									<tr class="row">
+										<td class="col-4">
+											<form method="post" action="#">
+												<select name="category" id="category">
+													<option value="">- Select Type -</option>
+													<option value="1">{{1}}</option>
+													<option value="1">{{2}}</option>
+													<option value="1">{{3}}</option>
+													<option value="1">{{4}}</option>
+												</select>
+												<div>
+													<input type="submit" value="Change Type" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<form method="post" action="#">
+												<div>
+													<input type="text" name="query" id="query" value="" placeholder="Enter New Price" class="small" />
+												</div>
+												<div>
+													<input type="submit" value="Change Price" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<a class="button small fit">Delete</a>
+										</td>
+									</tr>
+									<tr>
+										<td>{{3}}</td>
+										<td>{{Extended/RV}}}</td>
+										<td>{{$25.00}}</td>
+									</tr>
+									<tr class="row">
+										<td class="col-4">
+											<form method="post" action="#">
+												<select name="category" id="category">
+													<option value="">- Select Type -</option>
+													<option value="1">{{1}}</option>
+													<option value="1">{{2}}</option>
+													<option value="1">{{3}}</option>
+													<option value="1">{{4}}</option>
+												</select>
+												<div>
+													<input type="submit" value="Change Type" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<form method="post" action="#">
+												<div>
+													<input type="text" name="query" id="query" value="" placeholder="Enter New Price" class="small" />
+												</div>
+												<div>
+													<input type="submit" value="Change Price" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<a class="button small fit">Delete</a>
+										</td>
+									</tr>
+									<tr>
+										<td>{{4}}</td>
+										<td>{{Extended/RV}}}</td>
+										<td>{{$25.00}}</td>
+									</tr>
+									<tr class="row">
+										<td class="col-4">
+											<form method="post" action="#">
+												<select name="category" id="category">
+													<option value="">- Select Type -</option>
+													<option value="1">{{1}}</option>
+													<option value="1">{{2}}</option>
+													<option value="1">{{3}}</option>
+													<option value="1">{{4}}</option>
+												</select>
+												<div>
+													<input type="submit" value="Change Type" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<form method="post" action="#">
+												<div>
+													<input type="text" name="query" id="query" value="" placeholder="Enter New Price" class="small" />
+												</div>
+												<div>
+													<input type="submit" value="Change Price" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<a class="button small fit">Delete</a>
+										</td>
+									</tr>
+									<tr>
+										<td>{{5}}</td>
+										<td>{{Extended/RV}}}</td>
+										<td>{{$25.00}}</td>
+									</tr>
+									<tr class="row">
+										<td class="col-4">
+											<form method="post" action="#">
+												<select name="category" id="category">
+													<option value="">- Select Type -</option>
+													<option value="1">{{1}}</option>
+													<option value="1">{{2}}</option>
+													<option value="1">{{3}}</option>
+													<option value="1">{{4}}</option>
+												</select>
+												<div>
+													<input type="submit" value="Change Type" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<form method="post" action="#">
+												<div>
+													<input type="text" name="query" id="query" value="" placeholder="Enter New Price" class="small" />
+												</div>
+												<div>
+													<input type="submit" value="Change Price" class="small fit" />
+												</div>
+											</form>
+										</td>
+										<td class="col-4">
+											<a class="button small fit">Delete</a>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</section>
+
+					<section class="box">
+						<h3 style="text-align: center;">Add a Parking Spot</h3>
+						<p style="text-align: center;">Enter details:</p>
+						<form method="post" action="#" class="special row">
+							<div class="">
+								<select name="category" id="category">
+									<option value="">- Select Type -</option>
+									<option value="1">{{1}}</option>
+									<option value="1">{{2}}</option>
+									<option value="1">{{3}}</option>
+									<option value="1">{{4}}</option>
+								</select>
+							</div>
+							<br />
+							<div class="col-6">
+								<input type="text" name="price" id="price" value="" placeholder="Enter Price" class="small" />
+							</div>
+							<br />
+							<div class="">
+								<ul class="actions">
+									<li><input type="submit" value="Create Event" /></li>
+								</ul>
+							</div>
+						</form>
+					</section>
+
+					<section class="box">
+						<p>Map here</p>
+					</section>
+
 				</section>
 
 			<!-- Footer -->
