--- a/htmlTemplate/about.html
+++ b/htmlTemplate/about.html
@@ -18,10 +18,10 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">About</a></h1>
+					<h1><a href="about.html">About</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="main.html">Home</a></li>
 							<!-- <li>
 								<a href="#" class="icon solid fa-angle-down">Layouts</a>
 								<ul>
