Mascots added to about page

--- a/htmlTemplate/about.html
+++ b/htmlTemplate/about.html
@@ -62,8 +62,8 @@
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>Who Are The Creators?</h3>
-								<p>We are a team goes by the name The Djinns. The four of us (Joel Christensen, Autumn Arbon, Lexy Simmons, and Palani Johnson) have created this for the purpose of fulfilling a school project and to fulfill a need in the community. We are all working toward Bachelor Degrees in Computer Science. We are motivated by two things: our desires to recieve those degrees and our mascot, Palani's cat.</p>
-								<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+								<p>We are a team goes by the name The Djinns. The four of us (Joel Christensen, Autumn Arbon, Lexy Simmons, and Palani Johnson) have created this for the purpose of fulfilling a school project and to fulfill a need in the community. We are all working toward Bachelor Degrees in Computer Science. We are motivated by two things: our desires to receive those degrees and our mascots (Palani's cats) Mei Mei and Pup.</p>
+								<span class="image featured"><img src="images/mei_and_pup_3.jpg" alt="" /></span>
 							</div>
 						</div>
 					</div>
